syntax = "proto3";
package proto;

service Show {
    rpc CreateShow (CreateShowRequest) returns (CreateShowResponse) {
    }

    rpc DeleteShow (DeleteShowRequest) returns (DeleteShowResponse) {
    }

    rpc DeleteShowConnectedCinema (DeleteShowConnectedCinemaRequest) returns (DeleteShowConnectedCinemaResponse) {
    }

    rpc DeleteShowConnectedMovie (DeleteShowConnectedMovieRequest) returns (DeleteShowConnectedMovieResponse) {
    }

    rpc ListShow (ListShowRequest) returns (ListShowResponse) {
    }

    rpc FindShowConnectedCinema (FindShowConnectedCinemaRequest) returns (FindShowConnectedCinemaResponse) {
    }

    rpc FindShowConnectedMovie (FindShowConnectedMovieRequest) returns (FindShowConnectedMovieResponse) {
    }
}

message ShowMessage {
    int64 cinemaId = 1;
    int64 movieId = 2;
}


message CreateShowRequest {
   ShowMessage createData = 1;
}

message CreateShowResponse {
    int64 createShowId = 1;
}

message DeleteShowRequest {
   int64 deleteShowId = 1;
}

message DeleteShowResponse {
    bool answer = 1;
}

message DeleteShowConnectedCinemaRequest {
   int64 cinemaId = 1;
}

message DeleteShowConnectedCinemaResponse {
    bool answer = 1;
}

message DeleteShowConnectedMovieRequest {
   int64 movieId = 1;
}

message DeleteShowConnectedMovieResponse {
    bool answer = 1;
}

message ListShowRequest {
   int64 showId = 1;
}

message ListShowResponse {
    repeated ShowMessage allShowsData = 1;
}

message FindShowConnectedMovieRequest {
    int64 movieId = 1;
}

message FindShowConnectedMovieResponse {
    repeated ShowMessage movieData = 1;
}

message FindShowConnectedCinemaRequest {
    int64 cinemaId = 1;
}

message FindShowConnectedCinemaResponse {
    repeated ShowMessage cinemaData = 1;
}